Attempt to fix release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "add-reviewer-labels",
+  "name": "github-action-reviewer-labels",
   "version": "0.0.1-development",
   "description": "A GitHub Action to add labels to a PR based on assigned reviewers",
   "author": "Franz See <franz@see.net.ph>",
