--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Add Reviewer Labels'
+name: 'github-action-reviewer-labels'
 author: 'Franz See <franz@see.net.ph>'
 description: 'Automatically adds/removes labels on a pull request based on who the reviewers are. This is to allow people looking at the list of pull requests who is reviewing what.'
 runs:
