--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Semantic Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+      - name: Release
+        run: |
+          tag='v${{ inputs.version }}'
+          major_tag="${tag:0:2}"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git commit -m "Release ${tag}"
+          # Push the specific version tag and update the major version tag
+          # Start with specific version tag which will error if it's taken
+          git tag "$tag"
+          git push origin "$tag"
+          git tag -f "$major_tag"
+          git push -f origin "$major_tag"
