--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,12 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Semver version to tag the target with (e.g. 1.2.3)
+        type: string
+        required: true
 
 jobs:
   release:
